# pydanticmuch

./: pyproject.toml
example/: __init__.py
example/lib/: __init__.py
