[tool.poetry]
name = "pydanticmuch"
version = "0.1.0"
description = "Pydantic much?"
authors = ["Pierre Carrier <pc@rrier.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
cbor2 = "^5.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
